fixed title spacing in mobile | contacts page mobile finished

--- a/src/app/components/Navbar/Navbar.module.css
+++ b/src/app/components/Navbar/Navbar.module.css
@@ -10,7 +10,7 @@
   padding-bottom: 4rem;
   color: #fff;
   backdrop-filter: blur(8px);
-  background-color: rgba(19, 19, 19, 0.3);
+  background-color: unset;
   z-index: 1000;
   max-width: 150rem;
   margin-left: auto;
